--- a/page 2.html
+++ b/page 2.html
@@ -22,7 +22,7 @@
       <label>Would you kindly tell us your name?<br></label>
       <input type="text" name="Would you kindly tell us your name?" placeholder="(Ex: Arisu Ryohei from Alice in Borderland)" required><br>
         <label>List two alternative face claims you're<br>going to use should you not get accepted<br>on your first face claim.</label>   
-      <input type="text" name="List two alternative face claims you'regoing to use should you not get accepted on your first face claim." placeholder="Max. 2" required>
+      <input type="text" name="List two alternative face claims you're going to use should you not get accepted on your first face claim." placeholder="Max. 2" required>
         <p>Have your read our website?</p>   
       <input type="text" name="Have your read our website?" placeholder="Yes or No" required>
     <div class="inputfield">
@@ -31,7 +31,7 @@
     </div>
     <label>If you are not admitted into the borders,<br>would you want to be put on our waiting list?<br></label>
     <div class="select">
-        <select name="Waiting-list" id="Waiting-list">
+        <select name="If you are not admitted into the borders, would you want to be put on our waiting list" id="Waiting-list">
            <option selected disabled>Select</option>
            <option value="Yes">Yes min</option>
            <option value="No">No u_u</option>
@@ -40,7 +40,7 @@
      <button id="submit" type="submit" name="submit">REGISTER</button></input>
     </div>
     </form>
-
+0
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyIgahYo8OZRNInde6MVntreKvivGmdVf3UPTbfMRFuSSPeETa9j_iiqF7PrFAFgSCPkw/exec'
         const form = document.forms['submit-to-google-sheet']
