--- a/page 2.html
+++ b/page 2.html
@@ -28,14 +28,9 @@
         <label> Would you like to betray or leave your friend behind in case of your accomplished game<br>and explain why?</label><br>
         <textarea class="textarea"name="Would you like to betray or leave your friend behind in case of your accomplished game and explain why?" placeholder="(2500 characters at maximum and external links are prohibited)" required></textarea>
     </div>
-    <label>If you are not admitted into the borders,<br>would you want to be put on our waiting list?<br></label>
-    <div class="select">
-        <select name="If you are not admitted into the borders, would you want to be put on our waiting list" id="Waiting-list">
-           <option selected disabled>Select</option>
-           <option value="Yes">Yes min</option>
-           <option value="No">No u_u</option>
-        </select>
-     </div><br>
+    <p>If you are not admitted into the borders<br>would you want to be put on our waiting list?</p>   
+      <input type="text" name="If you are not admitted into the borders, would you want to be put on our waiting list?" required>
+
      <button id="submit" type="submit" name="submit">REGISTER</button></input>
     </div>
     </form>
