--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body width = "device-width">
   <div class="wrapper">
-    <p>REGISTER FOR PLAY THE GAME</p>
+    <p>REGISTER FOR THE GAME</p>
     <form>
       <input type="text" placeholder="Enter username">
       <input type="password" placeholder="Password">
