--- a/page 2.html
+++ b/page 2.html
@@ -26,7 +26,7 @@
       <input type="text" name="Have your read our website?" placeholder="Yes or No" required>
     <div class="inputfield">
         <label> Would you like to betray or leave your friend behind in case of your accomplished game<br>and explain why?</label><br>
-        <textarea class="textarea"name="Would you like to betray or leave your friend behind in case of your accomplished game and explain why?" placeholder="(2500 characters at maximum and external links are prohibited)" required></textarea>
+        <textarea class="textarea"name="Would you like to betray or leave your friend behind in case of your accomplished game and explain why?" placeholder="(2500 characters at maximum and external links are prohibited. Bahasa or English it's okay)" required></textarea>
     </div>
     <p>If you are not admitted into the borders<br>would you want to be put on our waiting list?</p>   
       <input type="text" name="If you are not admitted into the borders, would you want to be put on our waiting list?" required>
