--- a/index.html
+++ b/index.html
@@ -12,23 +12,7 @@
 
 <body width = "device-width">
   <div class="wrapper">
-    <p>REGISTER FOR THE GAME</p>
-    <form>
-      <input type="text" placeholder="Enter username">
-      <input type="password" placeholder="Password">
-    <closeform></closeform></form>
-    <button>Sign in</button>
-    <p class="or">
-    <span>Or continue with</span>
-    </p>
-    <div class="icons">
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-instagram"></i>
-    </div>
-    <div class="not-member">
-      Not a member? <a href="page 2.html">Register Now</a>
-    </div>
+    <p>Sorry, we're no longer accepting new members.</p>
   </div>
 
 </body>
